--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,3 +29,11 @@ set_target_properties(libspirit PROPERTIES PREFIX "")
 install (TARGETS libspirit DESTINATION lib)
 install (FILES "${PROJECT_BINARY_DIR}/libspiritconfig.h" 
   DESTINATION include)
+  
+# build a CPack driven installer package
+include (InstallRequiredSystemLibraries)
+set (CPACK_RESOURCE_FILE_LICENSE  
+     "${CMAKE_CURRENT_SOURCE_DIR}/License.txt")
+set (CPACK_PACKAGE_VERSION_MAJOR "${libspirit_VERSION_MAJOR}")
+set (CPACK_PACKAGE_VERSION_MINOR "${libspirit_VERSION_MINOR}")
+include (CPack)
