static libcurl _finally_ works on windows (msvc)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,10 @@ set (libspirit_VERSION_MINOR 0)
 # the name of the yajl directory
 set (YAJL_DIST_NAME yajl-2.0.3)
 
+#set(CMAKE_C_FLAGS "${CMAKE_ANSI_CFLAGS} ${CMAKE_C_FLAGS} CURL_STATICLIB")
+#set(CMAKE_REQUIRED_FLAGS ${CMAKE_ANSI_CFLAGS})
+
+
 
 # set the library type to dynamic (otherwise STATIC)
 set (LIB_TYPE SHARED)
@@ -20,6 +24,7 @@ configure_file (
   "${PROJECT_SOURCE_DIR}/libspiritconfig.h.in"
   "${PROJECT_BINARY_DIR}/libspiritconfig.h"
   )
+
 
 
 # add the binary tree to the search path for include files
@@ -35,10 +40,14 @@ include_directories("${PROJECT_BINARY_DIR}")
   set (EXTRA_LIBS ${EXTRA_LIBS} yajl_s)
 #endif (USE_YAJL)
 
-set (CURL_STATICLIB ON CACHE BOOL "get a static libcurl" FORCE)
-set (BUILD_CURL_EXE OFF CACHE BOOL "no exe needed" FORCE)
-set (BUILD_CURL_TESTS OFF CACHE BOOL "no tests needed" FORCE)
-set (BUILD_RELEASE_DEBUG_DIRS ON CACHE BOOL "seems to be bugged when off" FORCE)
+set (CURL_STATICLIB ON CACHE BOOL "(FORCED) get a static libcurl" FORCE)
+set (BUILD_CURL_EXE OFF CACHE BOOL "(FORCED) no exe needed" FORCE)
+set (BUILD_CURL_TESTS OFF CACHE BOOL "(FORCED) no tests needed" FORCE)
+#set (HTTP_ONLY ON CACHE BOOL "(FORCED) need only http" FORCE)
+if(MSVC)
+  set (BUILD_RELEASE_DEBUG_DIRS ON CACHE BOOL "(FORCED) seems to be bugged when off" FORCE)
+endif()
+
 add_subdirectory (curl)
 include_directories ("${PROJECT_BINARY_DIR}/curl/include/curl")
 include_directories ("${PROJECT_SOURCE_DIR}/curl/include")
@@ -52,7 +61,11 @@ target_link_libraries (libspirit  ${EXTRA_LIBS})
 
 #unset the name prefix, we want it to be called libspirit even in windows
 set_target_properties(libspirit PROPERTIES PREFIX "")
-
+if(MSVC)
+  set_property(TARGET libspirit PROPERTY COMPILE_DEFINITIONS CURL_STATICLIB)
+else()
+  add_definitions(-DCURL_STATICLIB)
+endif()
 
 # add the install targets
 install (TARGETS libspirit DESTINATION lib)
