fixed unix x64 compile errors documented changes to libcurl and libyajl CMakeLists in README

--- a/curl/lib/CMakeLists.txt
+++ b/curl/lib/CMakeLists.txt
@@ -98,6 +98,8 @@ target_link_libraries(${LIB_NAME} ${CURL_LIBS})
 
 if(WIN32)
   add_definitions( -D_USRDLL )
+else() #HACK
+  add_definitions ( -fPIC ) #HACK
 endif()
 
 set_target_properties(${LIB_NAME} PROPERTIES COMPILE_DEFINITIONS BUILDING_LIBCURL)
