--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ configure_file (
 # add the binary tree to the search path for include files
 # so that we will find libspiritconfig.h
 include_directories("${PROJECT_BINARY_DIR}")
-#include_directories ("${PROJECT_BINARY_DIR}/include")
+include_directories ("${PROJECT_BINARY_DIR}/include")
 
 
 # add the yajl json library
