fixed some detection lines in curl cmake script to work with OpenSSL on Windows

--- a/curl/CMakeLists.txt
+++ b/curl/CMakeLists.txt
@@ -256,7 +256,11 @@ mark_as_advanced(CMAKE_USE_OPENSSL)
 if(CMAKE_USE_OPENSSL)
   if(WIN32)
     find_package(OpenSSL)
-    if(OPENSSL_FOUND)
+    if(OPENSSL_FOUND OR (OPENSSL_INCLUDE_DIR AND OPENSSL_LIBRARIES))
+      message(STATUS "Found OpenSSL!")
+      set(CMAKE_REQUIRED_INCLUDES ${CMAKE_REQUIRED_INCLUDES} ${OPENSSL_INCLUDE_DIR})
+      include_directories(${OPENSSL_INCLUDE_DIR})
+      
       set(USE_SSLEAY TRUE)
       set(USE_OPENSSL TRUE)
       list(APPEND CURL_LIBS ${OPENSSL_LIBRARIES} )
