--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,12 @@ set (libspirit_VERSION_MINOR 0)
 set (incDir ${PROJECT_BINARY_DIR}/include/libspirit)
 
 SET (SRCS src/libspirit.c
-          src/libspirit_error.c)
-SET (HDRS src/libspirit_data.h)
+          src/libspirit_error.c
+          src/libspirit_news.c
+          src/utility.c)
+SET (HDRS src/libspirit_data.h
+          src/libspirit.h
+          src/utility.h)
 set (PUB_HDRS src/api/spirit_common.h
               src/api/spirit.h
               src/api/spirit_error.h
