--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,13 @@ set (incDir ${PROJECT_BINARY_DIR}/include/libspirit)
 SET (SRCS src/libspirit.c
           src/libspirit_error.c
           src/libspirit_news.c
+          src/libspirit_option.c
           src/utility.c)
 SET (HDRS src/libspirit_data.h
+          src/libspirit_option.h
           src/libspirit.h
           src/utility.h)
-set (PUB_HDRS src/api/spirit_common.h
-              src/api/spirit.h
+set (PUB_HDRS src/api/spirit.h
               src/api/spirit_error.h
               src/api/spirit_news.h)
 
