--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,7 +105,7 @@ install (FILES ${PUB_HDRS} DESTINATION include/libspirit)
 
 # build a CPack driven installer package
 include (InstallRequiredSystemLibraries)
-set (CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/License.txt")
+set (CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/COPYING")
 set (CPACK_PACKAGE_VERSION_MAJOR "${libspirit_VERSION_MAJOR}")
 set (CPACK_PACKAGE_VERSION_MINOR "${libspirit_VERSION_MINOR}")
 include (CPack)
